# jbd-bms-dashboard

./: .gitignore  README.md  main.py  pyproject.toml  simulator_main.py
bms_monitor/: config.py
bms_monitor/alerts/: checker.py
bms_monitor/protocol/: frames.py  parser.py
bms_monitor/simulator/: simulator.py
bms_monitor/storage/: db.py
bms_monitor/transport/: base.py  ble.py  serial.py
bms_monitor/ui/: main_window.py
bms_monitor/ui/widgets/: alerts_banner.py  ble_scan_dialog.py  cells_widget.py  fets_flags.py  history_widget.py  live_chart.py  settings_panel.py  stats_row.py
docs/superpowers/plans/: 2026-03-29-jbd-bms-dashboard.md
docs/superpowers/specs/: 2026-03-29-jbd-bms-dashboard-design.md
tests/: conftest.py
tests/alerts/: test_checker.py
tests/protocol/: test_frames.py  test_parser.py
tests/simulator/: test_simulator.py
tests/storage/: test_db.py
