[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jbd-bms-dashboard"
version = "0.1.0"
description = "Linux dashboard for JBD/Jiabaida LiFePO4 BMS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.4",
    "pyserial>=3.5",
    "bleak>=0.21.1",
]

[project.scripts]
jbd-bms = "main:main"
jbd-bms-sim = "simulator_main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
